--- a/dev_data/block.htm
+++ b/dev_data/block.htm
@@ -1,14 +1,12 @@
 <div class="block col-md-5">
  <h5 class="alert-info">{{SSDP}}</h5>
- <div class="alert alert-dismissible alert-warning {{g279149}}">
-  <button class="close" onclick="hide('g279149',this);" type="button">×</button>
-  {{LangTime4}} 1: <b>{{times1}}</b>
-  <br>{{LangTime4}} 2:  <b>{{times2}}</b>
-  <br>{{LangTime5}} <b>{{timeLed}}</b>{{LangSec}}
+ <div class="alert alert-dismissible alert-warning {{g279149-{{ip}}}}">
+  <button class="close" onclick="hide('g279149-{{ip}}',this);" type="button">×</button>
+  <ul>{{timerList}}</ul>
  </div>
  <hr>
  <div class="col-sm-offset-1 col-sm-10 pop-up hidden" id="pop-up-{{ip}}">
-  <h5 class="alert-warning">{{LangTime10}}</h5>
+  <h5 class="alert-warning">{{LangTime4}}</h5>
   <h4>{{LangTime8}}</h4>
   <div class="btn-group">
    <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=60&sound='+val('sound')*10+'&s='+val('speed'),thisId);" value="1">
@@ -41,8 +39,8 @@
  <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="{{LangColor3}}" onclick="toggle('pop-up-{{ip}}');colorUrl='set?c=0000ff';val('color-{{ip}}','#0000FF');thisId=this;" type="button">
  <input type="button" onclick="ajax('{{ip}}','led',this);" value="{{state}}" class="btn btn-block btn-primary">
  <hr>
- <div class="alert alert-dismissible alert-info {{g27579}}">
-  <button class="close" onclick="hide('g27579',this);" type="button">×</button>{{LangOptions2}}
+ <div class="alert alert-dismissible alert-info {{g27579-{{ip}}}}">
+  <button class="close" onclick="hide('g27579-{{ip}}',this);" type="button">×</button>{{LangOptions2}}
  </div>
  <a class="btn btn-block btn-default" href="http://{{ip}}/device.htm">{{LangOptions1}}</a>
 </div>
