--- a/dev_data/device.htm
+++ b/dev_data/device.htm
@@ -232,7 +232,7 @@
 </div> -->
      <div class="{{g85723}}">
       <button class="close" onclick="hide('g85723',this);" type="button">×</button>
-      <a href="/chart.htm#analog" target="_blank" class="close"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAM0lEQVQ4jWNgQAN+fgH/ScHo+oeiAUSbjMOi4WQAhsSAG0ByNFLNAIJOJlqCVAMGLPMAAM5NI5iNV9vsAAAAAElFTkSuQmCC" alt=""></a>
+      <a href="/chart.htm#analog" target="_blank" class="close"><i class="popup-img"></i></a>
       <div id="ct-analog" style="height:200px;margin-left:-20px"></div>
       <hr>
      </div>
