--- a/dev_data/block.htm
+++ b/dev_data/block.htm
@@ -2,7 +2,7 @@
  <h5 class="alert-info">{{SSDP}}</h5>
  <div class="alert alert-dismissible alert-warning {{g279149-{{ip}}}}">
   <button class="close" onclick="hide('g279149-{{ip}}',this);" type="button">×</button>
-  <a href="/timer.htm" target="_blank" class="close"><i class="popup-img"></i></a>
+  <a href="http://{{ip}}/timer.htm" target="_blank" class="close"><i class="popup-img"></i></a>
   <ul>{{timerList}}</ul>
  </div>
  <hr>
