--- a/dev_data/block.htm
+++ b/dev_data/block.htm
@@ -16,13 +16,14 @@
     <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=600&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="10">
     <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1500&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="15">
     <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1800&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="30">
+    <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=3600&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="60">
    </div>
    <br>
    <div class="btn-group">
-    <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=3600&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="60">
     <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=5400&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="1:30">
     <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=7200&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="2:00">
     <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=10800&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="3:00">
+    <input type="button" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=0&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'),thisId);" value="&#8734;">
    </div>
    <hr>
    <h4>{{LangTime5}}</h4>
@@ -41,7 +42,7 @@
   <input style="width:32%;display:inline-block;margin-top:5px;" class="btn btn-block btn-danger" value="{{LangColor1}}" onclick="toggle('pop-up-{{ip}}');colorUrl='set?c=ff0000';val('color-{{ip}}','#FF0000');thisId=this;" type="button">
   <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="{{LangColor2}}" onclick="toggle('pop-up-{{ip}}');colorUrl='set?c=00ff00';val('color-{{ip}}','#00FF00');thisId=this;" type="button">
   <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="{{LangColor3}}" onclick="toggle('pop-up-{{ip}}');colorUrl='set?c=0000ff';val('color-{{ip}}','#0000FF');thisId=this;" type="button">
-  <input type="button" onclick="ajax('{{ip}}','led',this);" value="{{state}}" class="btn btn-block btn-primary">
+  <input type="button" onclick="ajax('{{ip}}','rgb',this);" value="{{state}}" class="btn btn-block btn-primary">
   <hr>
   <div class="alert alert-dismissible alert-info {{g27579-{{ip}}}}">
    <button class="close" onclick="hide('g27579-{{ip}}',this);" type="button">×</button>{{LangOptions2}}
