--- a/dev_data/timer.htm
+++ b/dev_data/timer.htm
@@ -11,12 +11,12 @@
   <script type="text/javascript">
    function handleServerResponse(){
     html("timer-list", ' ');
-    LoadTimers(jsonResponse.ip);
+    loadTimers(jsonResponse.ip);
     html("device", ' ');
-    LoadDevice('first');
+    loadDevice('first');
    }
 
-   function LoadDevice(content){
+   function loadDevice(content){
     html("timer-list", ' ');
     var xhttp=createXmlHttpObject();
     xhttp.open("GET", "/devices.list.json?"+Math.floor(Math.random()*10000), true);
@@ -28,7 +28,7 @@
        if (content) {
         document.getElementById("device").innerHTML += '<option value="'+ipModule[key].ip+'">'+ipModule[key].SSDP+'<\/option>';
        } else {
-        LoadTimers(ipModule[key].ip,ipModule[key].SSDP);
+        loadTimers(ipModule[key].ip,ipModule[key].SSDP);
        }
       }
      }
@@ -62,7 +62,7 @@
     <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
      <h5 class="alert-danger">{{SSDP}}</h5>
      <div class="btn-group" id="language">
-      <a href="#" class="btn btn-default dropdown-toggle" onclick="toggle('language-set');LoadLang('language-set');return false">{{lang}} <span class="caret"></span></a>
+      <a href="#" class="btn btn-default dropdown-toggle" onclick="toggle('language-set');loadLang('language-set');return false">{{lang}} <span class="caret"></span></a>
       <ul class="dropdown-menu hidden" id="language-set"><li><a href="#">{{LangLoading}}</a></li></ul>
      </div>
      <a class="btn btn-block btn-danger" id="btn-devices" href="/">{{LangDevices}}</a>
@@ -83,7 +83,7 @@
        <tr><td colspan="5">{{LangLoading}}</td></tr>
       </tbody>
      </table>
-     <input class="btn btn-block btn-default" value="{{LangMoreDevice}}" onclick="LoadDevice();" type="button">
+     <input class="btn btn-block btn-default" value="{{LangMoreDevice}}" onclick="loadDevice();" type="button">
      <hr>
      <h2>{{LangTime3}}</h2>
      <div class="alert alert-dismissible alert-warning {{g3452}}"><button class="close" onclick="hide('g2532',this);" type="button">×</button>{{LangTime6}}</div>
