--- a/dev_data/rgb2.htm
+++ b/dev_data/rgb2.htm
@@ -33,6 +33,60 @@
 
      <h2 id="url"></h2>
 
+
+     <input id="color-192.168.1.35" class="form-control btn-primary" onchange="sends(this,'/set?c='+(this.value).substring(1,7));" value="#fdfdfd" type="color">
+
+
+     <select class="btn btn-block btn-default" id="modes" onchange="sends(this,'/set?m='+this.value);">
+      <option value="0">Select Mode</option>
+      <option value="0">Static</option>
+      <option value="1">Blink</option>
+      <option value="2">Breath</option>
+      <option value="3">Color Wipe</option>
+      <option value="4">Color Wipe Random</option>
+      <option value="5">Random Color</option>
+      <option value="6">Single Dynamic</option>
+      <option value="7">Multi Dynamic</option>
+      <option value="8">Rainbow</option>
+      <option value="9">Rainbow Cycle</option>
+      <option value="10">Scan</option>
+      <option value="11">Dual Scan</option>
+      <option value="12">Fade</option>
+      <option value="13">Theater Chase</option>
+      <option value="14">Theater Chase Rainbow</option>
+      <option value="15">Running Lights</option>
+      <option value="16">Twinkle</option>
+      <option value="17">Twinkle Random</option>
+      <option value="18">Twinkle Fade</option>
+      <option value="19">Twinkle Fade Random</option>
+      <option value="20">Sparkle</option>
+      <option value="21">Flash Sparkle</option>
+      <option value="22">Hyper Sparkle</option>
+      <option value="23">Strobe</option>
+      <option value="24">Strobe Rainbow</option>
+      <option value="25">Multi Strobe</option>
+      <option value="26">Blink Rainbow</option>
+      <option value="27">Chase White</option>
+      <option value="28">Chase Color</option>
+      <option value="29">Chase Random</option>
+      <option value="30">Chase Rainbow</option>
+      <option value="31">Chase Flash</option>
+      <option value="32">Chase Flash Random</option>
+      <option value="33">Chase Rainbow White</option>
+      <option value="34">Chase Blackout</option>
+      <option value="35">Chase Blackout Rainbow</option>
+      <option value="36">Color Sweep Random</option>
+      <option value="37">Running Color</option>
+      <option value="38">Running Red Blue</option>
+      <option value="39">Running Random</option>
+      <option value="40">Larson Scanner</option>
+      <option value="41">Comet</option>
+      <option value="42">Fireworks</option>
+      <option value="43">Fireworks random</option>
+      <option value="44">Merry Christmas</option>
+     </select>
+
+
      <h4>{{LangTime8}}</h4>
      <div class="input-group">
       <input class="form-control" value="10" pattern="[-+]?[0-9]*[.]?[0-9]+" id="time">
@@ -62,7 +116,7 @@
      <input id="brightness" class="form-control" onchange="sends(this,'/set?b='+this.value);" type="range" min="0" max="255" step="1" value="255">
 
      <input type="button" class="btn btn-primary" onclick="sends(this,'/rgb');" value="Выключить\Выключить">
-     <input type="button" class="btn btn-primary" onclick="sends(this,'/set?m=9&time='+val('time')+'&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'));" value="Отправить все настройки сразу">
+     <input type="button" class="btn btn-primary" onclick="sends(this,'/set?m='+val('modes')+'&time='+val('time')+'&sound='+val('sound')*10+'&s='+val('speed')+'&b='+val('brightness'));" value="Отправить все настройки сразу">
 
      <hr>
      <a class="btn btn-block btn-default" href="/device.htm">{{LangOptions1}}</a>
